WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272116
[WebAuthn] Registrations do not return transports
https://bugs.webkit.org/show_bug.cgi?id=272116
Summary
[WebAuthn] Registrations do not return transports
pascoe@apple.com
Reported
2024-04-03 15:48:46 PDT
This needs to be passed along in the modern flow.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2024-04-03 15:48:56 PDT
<
rdar://problem/125794592
>
pascoe@apple.com
Comment 2
2024-04-03 15:50:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26814
EWS
Comment 3
2024-04-05 10:24:09 PDT
Committed
277123@main
(44f96cd7af27): <
https://commits.webkit.org/277123@main
> Reviewed commits have been landed. Closing PR #26814 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug